--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
 
+body{
+  overflow: hidden;
+}
 .card{
   height:200;
   width:200*0.7; 
@@ -53,11 +56,11 @@
 @keyframes objectionFormFadeIn {
   from{
       opacity: 0;
-      top: 0;
+      top: 0px;
   }
   to{
       opacity: 1;
-      top: 100;
+      top: 100px;
   }
 }
 
@@ -185,13 +188,9 @@ to {left:5px;}
 .leaderboardFormTextDiv{
   height: 80%;
   width: 100%;
-  border-style: solid;
-  border-color: green;
   position: absolute;
 }
 .userSignDiv{
-  border-style: solid;
-  border-color: black;
   height: 20%;
   width: 100%;
   position: absolute;
@@ -200,8 +199,6 @@ to {left:5px;}
 .printNameDiv{
   position: absolute; 
   height:30; 
-  border-style: solid;
-  border-color: gray;
   width: 50%;
   height: 100%;
 }
@@ -212,9 +209,9 @@ to {left:5px;}
   left:10%;
   top: 17%;
   width: 68%;
-  border-top-style:hidden;
-  border-left-style:hidden;
-  border-right-style:hidden;
+  border-top-style: hidden;
+  border-left-style: hidden;
+  border-right-style: hidden;
   font-family: 'Shadows Into Light', cursive;
   font-size: 25px
 }
@@ -234,8 +231,6 @@ to {left:5px;}
   height: 100%;
   width:50%;
   right: 0px;
-  border-style: solid;
-  border-color: green;
 }
 
 .signatureText{
@@ -256,10 +251,9 @@ to {left:5px;}
 .signatureArea{
   height: 57%;
   width: 100%;
-  border-style: solid;
-  border-color: yellow;
 }
 .leaderboardDiv{
+  overflow-y: scroll;
   position: absolute;
   z-index: 100000;
   height: 100%;
@@ -321,15 +315,27 @@ to {left:5px;}
   background-color: red;
   justify-content: center
 }
-.courtNotStartedBackground{
-  height: 100%;
-  width: 100%;
+.courtNotStartedMessage{
+  border-style: double;
+  border-color: #8d6d21;
+  height: 60%;
+  width: 25%;
+  top: 50%;
+  left: 50%;
+  background-color: white;
+  transform: translate(-50%, -50%);
   position: absolute;
   z-index: 10001;
 }
+.startCourtButton{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 .timeLeftBarDiv{
   position: absolute;
-  top: -20;
+  top: -20px;
   width: 100%;
 }
 .promptForm{
@@ -391,7 +397,67 @@ to {left:5px;}
   animation-duration: 2s;
   animation-timing-function: linear;
 }
+.phoenixScore{
+  color:blue;
+  position: absolute;
+  top: 0px;
+  left: 30px;
+  font-size: 30px;
+}
+.edgeworthScore{
+  color: maroon;
+  position: absolute;
+  top: 0px;
+  right: 50px;
+  font-size: 30px
+}
+.cardRow{
+  position: absolute; 
+  bottom: 1; 
+  left: 18%; 
+  z-index: 2;
 
+}
+.prosecutionView{
+  position: absolute;
+  right: 256px;
+  top: 133px;
+  z-index: 1;
+}
+.defenceView{
+  position: absolute;
+  top: 133px;
+}
+.judgeView{
+  position: absolute;
+  left: 36%;
+  z-index: 1
+}
+.courtView{
+  border-style: solid;
+  border-color: black;
+  position: relative;
+  z-index: 1000;
+  height: 70%;
+  width: 80%;
+  left: 10%;
+}
+.mainView{
+  border-style: solid;
+  border-color: red;
+  position: absolute;
+  z-index: 1;
+  height: 70%;
+  width: 80%;
+  left: 9%;
+  min-width: 900
+}
+.objectionMeter{
+  position: absolute;
+  border-style: solid;
+  left: 1;
+  bottom: 40;
+}
 
 
 /*        DOORS       */ 
@@ -494,7 +560,7 @@ to {left:5px;}
   animation-fill-mode: forwards;
 }
 .doorRectangle1Outer{
-  width: 40%;
+  width: 60%;
   height: 40%;
   border-style: outset;
   border-width: 5px;
@@ -521,7 +587,7 @@ to {left:5px;}
   transform: translate(-50%, -50%)
 }
 .doorRectangle2Outer{
-  width: 40%;
+  width: 60%;
   height: 40%;
   border-style: outset;
   border-width: 5px;
