--- a/src/App.css
+++ b/src/App.css
@@ -169,6 +169,7 @@ to {left:5px;}
 .leaderboardForm{
   position: absolute;
   height: 80vh;
+  max-height: 80vh;
   width: 56.6vh;
   background-color: white;
   z-index: 100000;
@@ -255,10 +256,10 @@ to {left:5px;}
 .leaderboardDiv{
   overflow-y: scroll;
   position: absolute;
-  z-index: 100000;
+  z-index: 99000;
   height: 100%;
   width: 50%;
-  background-color: white;
+  background-color: whitesmoke;
   border: solid 1px black;
   top: 50%;
   left: 50%;
@@ -301,19 +302,26 @@ to {left:5px;}
   position: absolute;
   height: 100%;
   width: 100%;
-  z-index: 10000;
+  z-index: 10001;
   opacity: 0.9;
   background-color: yellow;
   justify-content: center;
 }
-.leaderboardFormBackground{
+.leaderboardOverlayBackground{
   position: absolute;
   height: 100%;
   width: 100%;
-  z-index: 10000;
-  opacity: 0.9;
-  background-color: red;
-  justify-content: center
+  z-index: 10001;
+  opacity: 0.7;
+  background-color: black;
+  justify-content: center;
+}
+.leaderboardOverlayPhoenixImg{
+  right: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.3;
+  position:absolute;
 }
 .courtNotStartedMessage{
   border-style: double;
