--- a/src/App.css
+++ b/src/App.css
@@ -262,7 +262,7 @@ to {left:5px;}
   background-color: whitesmoke;
   border: solid 1px black;
   top: 50%;
-  left: 50%;
+  left: 65%;
   transform: translate(-50%, -50%);
 }
 .leaderboardList{
@@ -463,10 +463,23 @@ to {left:5px;}
 .objectionMeter{
   position: absolute;
   border-style: solid;
-  left: 1;
-  bottom: 40;
+  background-color: rgba(149, 140, 140, 0.5);
+  bottom: -170px;
+  left: -40px;
 }
-
+.objectionMeter:hover {
+  cursor: not-allowed;
+}
+.objectionMeterFull{
+  position: absolute;
+  border-style: solid;
+  background-color: rgba(149, 140, 140, 0.5);
+  bottom: -170px;
+  left: -40px;
+}
+.objectionMeterFull:hover {
+  cursor: pointer;
+}
 
 /*        DOORS       */ 
 
