--- a/src/App.css
+++ b/src/App.css
@@ -631,3 +631,29 @@ to {left:5px;}
   to {left:100%}
 }
 
+.quote-splash {
+  animation: 2s anim-popoutin ease-in-out infinite;
+}
+@keyframes anim-popoutin {
+  0% {
+    transform: scale(1) rotate(-20deg);
+    opacity: 1;
+
+  }
+  25% {
+    transform: scale(1.05) rotate(-20deg);
+    opacity: 1;
+  
+  }
+  50% {
+    transform: scale(1) rotate(-20deg);
+    opacity: 1;
+  
+  }
+  100% {
+    transform: scale(1) rotate(-20deg);
+    opacity: 1;
+    
+  }
+}
+
