--- a/src/App.css
+++ b/src/App.css
@@ -18,17 +18,6 @@ body{
 .card:hover{
   background-color: aqua;
 }
-.cardSmall{
-  height:200;
-  width:200*0.7; 
-  background-color:"red";
-  border-style:"solid";
-  border-width:2;
-  border-color:"black";
-  border-radius: 25;
-  text-align: "center";
-  user-select: "none";
-}
 
 @keyframes shake {
   0% { transform: translate(1px, 1px) rotate(0deg); }
@@ -195,21 +184,25 @@ to {left:5px;}
   height: 20%;
   width: 100%;
   position: absolute;
+  display: flex;
+  flex-direction: row;
   bottom: 0px;
+  border: solid red;
 }
 .printNameDiv{
-  position: absolute; 
-  height:30; 
-  width: 50%;
   height: 100%;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: solid green;
+  text-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
 }
-
 .printNameInput{
-  position: absolute; 
-  height:30; 
-  left:10%;
-  top: 17%;
-  width: 68%;
+  width: 50%;
   border-top-style: hidden;
   border-left-style: hidden;
   border-right-style: hidden;
@@ -222,35 +215,32 @@ to {left:5px;}
 }
 
 .printNameText{
-  position: absolute;
-  left: 23%;
-  top: 50%
+  color: black;
 }
 
 .signatureDiv{
-  position: absolute; 
   height: 100%;
-  width:50%;
-  right: 0px;
+  width: 50%;
+  border: solid blue;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
 }
 
 .signatureText{
-  position: absolute;
-  right: 30%;
-  top: 51%;
+  color: black;
 }
 .signatureLine{
-  position: absolute;
-  width:68%;
-  right:14%;
-  top: 57%;
-  height: 1.5px;
-  color: cyan;
+  width:50%;
+  height: 2px;
   background-color: gainsboro;
 }
-
 .signatureArea{
-  height: 57%;
+  height: 100%;
   width: 100%;
 }
 .leaderboardDiv{
@@ -419,24 +409,44 @@ to {left:5px;}
   z-index: 2;
 
 }
-.prosecutionView{
+.prosecutionViewDiv{
+  height: 100%;
+  width: 100%;
   position: absolute;
-  right: 256px;
-  top: 133px;
-  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  left:198px;
 }
-.defenceView{
+.defenceViewDiv{
+  height: 100%;
+  width: 100%;
   position: absolute;
-  top: 133px;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+}
+.gavelDiv{
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .judgeView{
+  height: 100%;
+  width: 100%;
   position: absolute;
-  left: 36%;
-  z-index: 1
+  display: flex;
+  justify-content: center;
 }
 .courtView{
-  border-style: solid;
+  border-style: double;
   border-color: black;
+  border-radius: 5px;
+  border-width: 6px;
+  background-color:rgba(232, 220, 220, 0.5);
   position: relative;
   z-index: 1000;
   height: 70%;
@@ -444,9 +454,10 @@ to {left:5px;}
   left: 10%;
 }
 .mainView{
-  border-style: solid;
-  border-color: red;
+  border-style: hidden inset hidden outset;
+  border-color: gray;
   position: absolute;
+  background-color:rgba(232, 220, 220, 0.5);
   z-index: 1;
   height: 70%;
   width: 80%;
@@ -616,6 +627,28 @@ to {left:5px;}
 }
 
 
+.fetchingVerdictText{
+  -webkit-text-stroke: 1px green;
+  font-family: sans;
+  color: white;
+  font-size: 40px;
+  position: absolute;
+  left: 30px;
+  animation: flash 2s linear infinite
+  
+}
+@keyframes flash{
+  from {
+    opacity:1;
+  }
+  50% {
+    opacity:0;
+  }
+  to {
+    opacity:1;
+  }
+}
+
 .verdictLetter{
   visibility: hidden;
   font-size: 180px;
@@ -637,7 +670,6 @@ to {left:5px;}
 }
 #verdictLettersDiv{
   background-color: antiquewhite;
-  opacity: 50%;
   width: 100%;
   position: absolute;
   justify-content: center;
