--- a/src/App.css
+++ b/src/App.css
@@ -165,8 +165,15 @@ to {left:5px;}
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  overflow: hidden;
 }
 
+.leaderboardFormTextDiv{
+  height: 80%;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
 .leaderboardFormHeading{
   display:flex;
   justify-content: center;
@@ -174,11 +181,14 @@ to {left:5px;}
   position: absolute;
   top: 5%;
 }
-
-.leaderboardFormTextDiv{
-  height: 80%;
-  width: 100%;
-  position: absolute;
+.leaderboardFormContent{
+  width: 78%;
+  display: flex;
+  justify-content: center;
+  font-size: 6;
+  position: relative;
+  top: 15%;
+  left: 10%;
 }
 .userSignDiv{
   height: 20%;
@@ -187,55 +197,59 @@ to {left:5px;}
   display: flex;
   flex-direction: row;
   bottom: 0px;
-  border: solid red;
 }
+
 .printNameDiv{
   height: 100%;
   width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: solid green;
   text-align: center;
+  align-items: center;
   -ms-flex-align: center;
   -webkit-align-items: center;
   -webkit-box-align: center;
 }
 .printNameInput{
-  width: 50%;
+  width: 70%;
+  height: 50%;
   border-top-style: hidden;
   border-left-style: hidden;
   border-right-style: hidden;
   font-family: 'Shadows Into Light', cursive;
-  font-size: 25px
+  font-size: 25px;
 }
-
 .printNameInput:focus{
   outline:none
 }
-
 .printNameText{
   color: black;
+}
+.printNameText:hover{
+  cursor: default;
 }
 
 .signatureDiv{
   height: 100%;
   width: 50%;
-  border: solid blue;
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  align-items: center;
   -ms-flex-align: center;
   -webkit-align-items: center;
   -webkit-box-align: center;
 }
-
 .signatureText{
   color: black;
 }
+.signatureText:hover{
+  cursor: default;
+}
 .signatureLine{
-  width:50%;
+  width:70%;
   height: 2px;
   background-color: gainsboro;
 }
@@ -272,15 +286,33 @@ to {left:5px;}
   border-color: red
 }
 .cardDiscardAreaActive{
-  border-style: solid;
-  border-color: green;
   width: 30%;
-  height: 100px;
+  height: 25%;
   z-index: 100;
   position: absolute;
+  display: flex;
+  align-content: center;
+  justify-content: center;
   top: 80%;
   left: 50%;
   transform: translate(-50%, -50%);
+  opacity: 80%;
+}
+.cardDiscardAreaShadowInner{
+  position:absolute;
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: inset 0px 0px .7rem .7rem rgba(0, 255, 0, 0.818);
+  opacity: 60%;
+}
+.cardDiscardAreaShadowOuter{
+  position:absolute;
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0px 0px .4rem .4rem rgba(0, 255, 0, 0.818);
+  opacity: 50%;
 }
 .leaderBoardBackground{
   position: absolute;
@@ -634,19 +666,27 @@ to {left:5px;}
   font-size: 40px;
   position: absolute;
   left: 30px;
+  top: -20px;
   animation: flash 2s linear infinite
   
 }
-@keyframes flash{
-  from {
-    opacity:1;
-  }
-  50% {
-    opacity:0;
-  }
-  to {
-    opacity:1;
-  }
+
+
+@keyframes closingLeft{
+  from {right:100%;}
+  to {right:50%}
+}
+@keyframes closingRight{
+  from {left: 100%;}
+  to {left: 50%;}
+}
+@keyframes openingLeft{
+  from {right:50%;}
+  to {right:100%}
+}
+@keyframes openingRight{
+  from {left:50%;}
+  to {left:100%}
 }
 
 .verdictLetter{
@@ -694,28 +734,24 @@ to {left:5px;}
 }
 
 @keyframes slideIn{
-  from{left: 1000px}
+  from{left: 100%}
   to{left: 0px}
 }
 @keyframes slideOut{
   from{right:0px}
-  to{right: 2000px}
+  to{right: 100%}
 }
-@keyframes closingLeft{
-  from {right:100%;}
-  to {right:50%}
-}
-@keyframes closingRight{
-  from {left: 100%;}
-  to {left: 50%;}
-}
-@keyframes openingLeft{
-  from {right:50%;}
-  to {right:100%}
-}
-@keyframes openingRight{
-  from {left:50%;}
-  to {left:100%}
+
+@keyframes flash{
+  from {
+    opacity:1;
+  }
+  50% {
+    opacity:0;
+  }
+  to {
+    opacity:1;
+  }
 }
 
 .quote-splash {
