--- a/src/App.css
+++ b/src/App.css
@@ -173,22 +173,23 @@ to {left:5px;}
   width: 100%;
   position: relative;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 .leaderboardFormHeading{
   display:flex;
+  flex-direction: column;
   justify-content: center;
+  text-align: center;
   width: 100%;
-  position: absolute;
   top: 5%;
 }
-.leaderboardFormContent{
-  width: 78%;
+.leaderboardFormMainText{
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: 6;
+  font-size: 6px;
   position: relative;
-  top: 15%;
-  left: 10%;
 }
 .userSignDiv{
   height: 20%;
@@ -769,22 +770,22 @@ to {left:5px;}
 }
 @keyframes anim-popoutin {
   0% {
-    transform: scale(1) rotate(-20deg);
+    transform: scale(1) rotate(20deg);
     opacity: 1;
 
   }
   25% {
-    transform: scale(1.05) rotate(-20deg);
+    transform: scale(1.05) rotate(20deg);
     opacity: 1;
   
   }
   50% {
-    transform: scale(1) rotate(-20deg);
+    transform: scale(1) rotate(20deg);
     opacity: 1;
   
   }
   100% {
-    transform: scale(1) rotate(-20deg);
+    transform: scale(1) rotate(20deg);
     opacity: 1;
     
   }
